# mp2f12

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  doc.rst  f12_intermediates.cc  f12_intermediates.h  integrals.cc  mp2f12.cc  mp2f12.h  plugin.cc  pymodule.py  teints.cc  teints.h
pytests/: test_f12_type.py
